--- a/CSS-section/how-css-is-structured/styles.css
+++ b/CSS-section/how-css-is-structured/styles.css
@@ -1,7 +1,31 @@
+* {
+	box-sizing: border-box;
+}
+
 .special {
 	color: red;
 }
 
 p {
 	color: blue;
+}
+
+a:link {
+	color: purple;
+}
+
+a:visited {
+	color: grey;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+.box p {
+	font-size: 3em;
+}
+
+.box p:first-child {
+	transform: rotateX(180deg);
 }
