selectors and combinators

--- a/CSS-section/styling-a-biography-page/styles.css
+++ b/CSS-section/styling-a-biography-page/styles.css
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
 	background-color: #fff;
 	color: #333;
@@ -24,7 +28,6 @@ h2 {
 }
 
 ul {
-	box-sizing: border-box;
 	background-color: #eeeeee;
 	border: 5px solid purple;
 	padding: 30px 30px;
@@ -34,6 +37,7 @@ ul li {
 	padding: 3px 0px;
 }
 
+ul:
 a:link,
 a:visited {
 	color: #fb6542;
